--- a/package.json
+++ b/package.json
@@ -3,13 +3,21 @@
   "version": "1.0.50",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "bun run --watch src/index.ts"
+    "dev": "bun run --watch src/index.ts",
+    "check": "ultracite check",
+    "fix": "ultracite fix"
   },
   "dependencies": {
+    "@prisma/adapter-libsql": "^7.3.0",
+    "@prisma/client": "^7.3.0",
+    "better-auth": "^1.4.18",
     "elysia": "latest"
   },
   "devDependencies": {
-    "bun-types": "latest"
+    "@biomejs/biome": "2.3.13",
+    "bun-types": "latest",
+    "prisma": "^7.3.0",
+    "ultracite": "7.1.4"
   },
   "module": "src/index.js"
 }
